--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ footer{background:var(--navy);padding:50px 5% 24px;color:#94a3b8;}
   <div class="hero-btns fade-in stagger-2">
     <a href="https://rbtax09.github.io/accountally-pro" target="_blank" class="btn-primary">🚀 Try Free Demo</a>
     <a href="#pricing" class="btn-secondary">💰 View Pricing</a>
-    <a href="https://wa.me/91XXXXXXXXXX" target="_blank" class="btn-whatsapp">💬 WhatsApp Us</a>
+    <a href="https://wa.me/917030827708" target="_blank" class="btn-whatsapp">💬 WhatsApp Us</a>
   </div>
   <div class="hero-stats fade-in stagger-3">
     <div class="stat"><div class="stat-num">12+</div><div class="stat-lbl">Accounting Modules</div></div>
@@ -409,7 +409,7 @@ footer{background:var(--navy);padding:50px 5% 24px;color:#94a3b8;}
         <div class="pf"><div class="pf-check">✅</div>Excel export</div>
         <div class="pf"><div class="pf-check">✅</div>Email support</div>
       </div>
-      <a href="https://wa.me/91XXXXXXXXXX?text=Hi, I want to get AccounTally Pro Basic plan" target="_blank" class="price-btn price-btn-outline">Get Started →</a>
+      <a href="https://wa.me/917030827708?text=Hi, I want to get AccounTally Pro Basic plan" target="_blank" class="price-btn price-btn-outline">Get Started →</a>
     </div>
     <!-- Standard -->
     <div class="price-card popular fade-in stagger-1">
@@ -428,7 +428,7 @@ footer{background:var(--navy);padding:50px 5% 24px;color:#94a3b8;}
         <div class="pf"><div class="pf-check">✅</div>Free onboarding call (30 min)</div>
         <div class="pf"><div class="pf-check">✅</div>Free updates</div>
       </div>
-      <a href="https://wa.me/91XXXXXXXXXX?text=Hi, I want to get AccounTally Pro Standard plan" target="_blank" class="price-btn price-btn-solid">Get Started →</a>
+      <a href="https://wa.me/917030827708?text=Hi, I want to get AccounTally Pro Standard plan" target="_blank" class="price-btn price-btn-solid">Get Started →</a>
     </div>
     <!-- Premium -->
     <div class="price-card fade-in stagger-2">
@@ -446,7 +446,7 @@ footer{background:var(--navy);padding:50px 5% 24px;color:#94a3b8;}
         <div class="pf"><div class="pf-check">✅</div>Custom feature requests</div>
         <div class="pf"><div class="pf-check">✅</div>Monthly review call</div>
       </div>
-      <a href="https://wa.me/91XXXXXXXXXX?text=Hi, I want to get AccounTally Pro Premium plan" target="_blank" class="price-btn price-btn-outline">Get Started →</a>
+      <a href="https://wa.me/917030827708?text=Hi, I want to get AccounTally Pro Premium plan" target="_blank" class="price-btn price-btn-outline">Get Started →</a>
     </div>
   </div>
 </section>
@@ -508,7 +508,7 @@ footer{background:var(--navy);padding:50px 5% 24px;color:#94a3b8;}
           <div class="contact-icon">📧</div>
           <div>
             <div class="contact-label">Email</div>
-            <div class="contact-value">hello@shreedigitax.com</div>
+            <div class="contact-value"><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="9ef6fbf2f2f1deedf6ecfbfbfaf7f9f7eaffe6b0fdf1f3">[email&#160;protected]</a></div>
           </div>
         </div>
         <div class="contact-item">
@@ -527,7 +527,7 @@ footer{background:var(--navy);padding:50px 5% 24px;color:#94a3b8;}
         </div>
       </div>
       <div style="margin-top:28px;">
-        <a href="https://wa.me/91XXXXXXXXXX?text=Hi, I want to know more about AccounTally Pro" target="_blank" class="btn-whatsapp" style="display:inline-flex;">💬 Chat on WhatsApp</a>
+        <a href="https://wa.me/917030827708?text=Hi, I want to know more about AccounTally Pro" target="_blank" class="btn-whatsapp" style="display:inline-flex;">💬 Chat on WhatsApp</a>
       </div>
     </div>
     <div>
@@ -550,8 +550,11 @@ footer{background:var(--navy);padding:50px 5% 24px;color:#94a3b8;}
           </select>
         </div>
         <div class="fld"><label>Message</label><textarea id="cf-msg" placeholder="Tell us about your business and what you need..."></textarea></div>
-        <button class="form-submit" onclick="submitForm()">📨 Send Message</button>
-        <div class="form-success" id="form-success">✅ Message sent! Your details have been saved. We will contact you within 24 hours on WhatsApp. A WhatsApp message has also been opened for you.</div>
+        <div style="display:grid;grid-template-columns:1fr 1fr;gap:10px;margin-top:4px;">
+          <button class="form-submit" onclick="submitForm('whatsapp')" style="background:linear-gradient(135deg,#25d366,#128c7e);">💬 Send via WhatsApp</button>
+          <button class="form-submit" onclick="submitForm('email')" style="background:linear-gradient(135deg,#1d4ed8,#3b82f6);">📧 Send via Email</button>
+        </div>
+        <div class="form-success" id="form-success"></div>
       </div>
     </div>
   </div>
@@ -564,8 +567,8 @@ footer{background:var(--navy);padding:50px 5% 24px;color:#94a3b8;}
       <div class="footer-logo">🧮 Shree Digitax Solutions</div>
       <p class="footer-about">Making professional accounting software affordable and accessible for every Indian small business. Our cloud-based AccounTally Pro replaces expensive Tally at a fraction of the cost.</p>
       <div style="display:flex;gap:12px;margin-top:16px;">
-        <a href="https://wa.me/91XXXXXXXXXX" target="_blank" style="color:#25d366;font-size:22px;text-decoration:none;">💬</a>
-        <a href="mailto:hello@shreedigitax.com" style="color:#94a3b8;font-size:22px;text-decoration:none;">📧</a>
+        <a href="https://wa.me/917030827708" target="_blank" style="color:#25d366;font-size:22px;text-decoration:none;">💬</a>
+        <a href="/cdn-cgi/l/email-protection#7a121f1616153a0912081f1f1e131d130e1b0254191517" style="color:#94a3b8;font-size:22px;text-decoration:none;">📧</a>
       </div>
     </div>
     <div>
@@ -599,9 +602,9 @@ footer{background:var(--navy);padding:50px 5% 24px;color:#94a3b8;}
 </footer>
 
 <!-- FLOATING WHATSAPP -->
-<a href="https://wa.me/91XXXXXXXXXX?text=Hi, I want to know more about AccounTally Pro" target="_blank" class="wa-float" title="Chat on WhatsApp">💬</a>
+<a href="https://wa.me/917030827708?text=Hi, I want to know more about AccounTally Pro" target="_blank" class="wa-float" title="Chat on WhatsApp">💬</a>
 
-<script>
+<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
 // ── Navbar scroll effect ──
 window.addEventListener('scroll',()=>{
   document.getElementById('navbar').classList.toggle('scrolled',window.scrollY>40);
@@ -632,69 +635,110 @@ document.querySelectorAll('.nav-links a').forEach(a=>{
 
 // ── Contact form ──
 // ── GOOGLE SHEETS INTEGRATION ──
-// Replace this URL with your Google Apps Script Web App URL after setup
-const SHEET_URL = 'https://script.google.com/macros/library/d/1sZ5F7gdZbcbKPKE2PQVSZzmyuLOvDjAPrEqt6w6dlDJ9TUbYGRpRo9hv/1';
+// 🔴 REPLACE THIS with your actual Google Apps Script Web App URL
+const SHEET_URL = 'https://script.google.com/macros/s/AKfycbz8zZcpfIqy23n0d0Q-L6XWbgsZJPeKniRPVuqIbAI9SjkZVOf0K0jMYytfkiCkfWCT/exec';
 
-async function submitForm(){
-  const name = document.getElementById('cf-name').value.trim();
+// WhatsApp number
+const WA_NUMBER = '917030827708';
+
+// 🔴 REPLACE with your receiving email address
+const OWNER_EMAIL = 'rbtaxconsultancy09@gmail.com';
+
+async function submitForm(channel) {
+  const name  = document.getElementById('cf-name').value.trim();
   const phone = document.getElementById('cf-phone').value.trim();
   const email = document.getElementById('cf-email').value.trim();
-  const plan = document.getElementById('cf-plan').value;
-  const msg = document.getElementById('cf-msg').value.trim();
+  const plan  = document.getElementById('cf-plan').value;
+  const msg   = document.getElementById('cf-msg').value.trim();
 
-  if(!name || !phone){ alert('Please enter your name and mobile number.'); return; }
+  if (!name || !phone) { alert('Please enter your Name and Mobile Number.'); return; }
 
-  // Show loading state
-  const btn = document.querySelector('.form-submit');
-  btn.textContent = '⏳ Sending...';
-  btn.disabled = true;
+  // Disable both buttons while submitting
+  const btns = document.querySelectorAll('.form-submit');
+  btns.forEach(b => { b.disabled = true; b.style.opacity = '0.7'; });
 
   const payload = {
-    name, phone, email, plan, message: msg,
-    source: 'Website Contact Form',
-    date: new Date().toLocaleString('en-IN', {timeZone:'Asia/Kolkata'}),
-    page: window.location.href
+    name, phone, email, plan,
+    message : msg,
+    channel : channel === 'email' ? 'Email Form' : 'WhatsApp Form',
+    source  : 'Website Contact Form',
+    date    : new Date().toLocaleString('en-IN', { timeZone: 'Asia/Kolkata' }),
+    page    : window.location.href
   };
 
+  // ── Step 1: Save to Google Sheets ──
+  const sheetSent = await saveToSheet(payload);
+
+  // ── Step 2: Open WhatsApp OR Email ──
+  if (channel === 'whatsapp') {
+    const waText =
+      `🔔 New Lead from Website!\n` +
+      `Name: ${name}\n` +
+      `Mobile: ${phone}\n` +
+      (email ? `Email: ${email}\n` : '') +
+      `Interested in: ${plan}\n` +
+      (msg ? `Message: ${msg}` : '');
+    window.open('https://wa.me/' + WA_NUMBER + '?text=' + encodeURIComponent(waText), '_blank');
+  } else {
+    const subject = `New Enquiry from ${name} — ${plan}`;
+    const body =
+      `Name: ${name}\n` +
+      `Mobile: ${phone}\n` +
+      `Email: ${email || 'Not provided'}\n` +
+      `Plan Interested: ${plan}\n` +
+      `Message: ${msg || 'No message'}\n\n` +
+      `Submitted: ${payload.date}\n` +
+      `Page: ${payload.page}`;
+    window.location.href =
+      `mailto:${OWNER_EMAIL}?subject=${encodeURIComponent(subject)}&body=${encodeURIComponent(body)}`;
+  }
+
+  // ── Step 3: Show success message ──
+  const successEl = document.getElementById('form-success');
+  successEl.style.display = 'block';
+  if (sheetSent) {
+    successEl.innerHTML =
+      channel === 'whatsapp'
+        ? '✅ <strong>Saved to Google Sheets!</strong> WhatsApp has been opened. We will contact you within 24 hours.'
+        : '✅ <strong>Saved to Google Sheets!</strong> Your email app has been opened. We will contact you within 24 hours.';
+    successEl.style.background = '#ecfdf5';
+    successEl.style.borderColor = '#a7f3d0';
+    successEl.style.color = '#065f46';
+  } else {
+    successEl.innerHTML =
+      channel === 'whatsapp'
+        ? '📨 <strong>WhatsApp opened!</strong> We received your message. (Sheets backup may be pending)'
+        : '📧 <strong>Email app opened!</strong> We received your message. (Sheets backup may be pending)';
+    successEl.style.background = '#fffbeb';
+    successEl.style.borderColor = '#fcd34d';
+    successEl.style.color = '#92400e';
+  }
+
+  // Clear form
+  ['cf-name','cf-phone','cf-email','cf-msg'].forEach(id => document.getElementById(id).value = '');
+  document.getElementById('cf-plan').selectedIndex = 0;
+
+  setTimeout(() => { successEl.style.display = 'none'; }, 8000);
+  btns.forEach(b => { b.disabled = false; b.style.opacity = '1'; });
+}
+
+async function saveToSheet(payload) {
+  if (!SHEET_URL || SHEET_URL === 'YOUR_GOOGLE_APPS_SCRIPT_URL_HERE') {
+    console.warn('Google Sheets URL not configured');
+    return false;
+  }
   try {
-    // Send to Google Sheets via Apps Script
     await fetch(SHEET_URL, {
-      method: 'POST',
-      mode: 'no-cors',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify(payload)
+      method  : 'POST',
+      mode    : 'no-cors',
+      headers : { 'Content-Type': 'application/json' },
+      body    : JSON.stringify(payload)
     });
-
-    // Also open WhatsApp with the lead info
-    const waText = `🔔 New Lead from Website!\nName: ${name}\nMobile: ${phone}${email?'\nEmail: '+email:''}\nInterested in: ${plan}${msg?'\nMessage: '+msg:''}`;
-    window.open('https://wa.me/91XXXXXXXXXX?text='+encodeURIComponent(waText), '_blank');
-
-    // Show success
-    document.getElementById('form-success').style.display = 'block';
-    document.getElementById('cf-name').value = '';
-    document.getElementById('cf-phone').value = '';
-    document.getElementById('cf-email').value = '';
-    document.getElementById('cf-msg').value = '';
-    setTimeout(() => document.getElementById('form-success').style.display = 'none', 6000);
-
-  } catch(err) {
-    // Even if sheets fails, open WhatsApp as backup
-    const waText = `New Lead: ${name}, ${phone}, ${plan}`;
-    window.open('https://wa.me/91XXXXXXXXXX?text='+encodeURIComponent(waText), '_blank');
-    document.getElementById('form-success').style.display = 'block';
-  } finally {
-    btn.textContent = '📨 Send Message';
-    btn.disabled = false;
+    return true;
+  } catch (err) {
+    console.error('Sheet save error:', err);
+    return false;
   }
 }
 
-// ── Trigger initial animations for above-fold elements ──
-window.addEventListener('load',()=>{
-  document.querySelectorAll('.fade-in').forEach(el=>{
-    const rect=el.getBoundingClientRect();
-    if(rect.top<window.innerHeight) el.classList.add('visible');
-  });
-});
-</script>
-</body>
-</html>
+// ── Trigger initial
