--- a/index.html
+++ b/index.html
@@ -1193,8 +1193,8 @@ footer{background:var(--ink);padding:54px 5% 24px;color:#94a3b8;}
       <h2 class="sec-h">Get in <span>Touch</span></h2>
       <p class="sec-p">Have questions? Want a demo? We respond within 24 hours on working days.</p>
       <div class="contact-info">
-        <div class="ci"><div class="ci-ico">💬</div><div><div class="ci-lbl">WhatsApp</div><div class="ci-val">+91 70308 27708</div></div></div>
-        <div class="ci"><div class="ci-ico">📧</div><div><div class="ci-lbl">Email</div><div class="ci-val">rbtaxconsultancy09@gmail.com</div></div></div>
+        <div class="ci"><div class="ci-ico">💬</div><div><div class="ci-lbl">WhatsApp</div><div class="ci-val">+91 9876543210</div></div></div>
+        <div class="ci"><div class="ci-ico">📧</div><div><div class="ci-lbl">Email</div><div class="ci-val">hello09@gmail.com</div></div></div>
         <div class="ci"><div class="ci-ico">📍</div><div><div class="ci-lbl">Location</div><div class="ci-val">Pune, Maharashtra, India</div></div></div>
         <div class="ci"><div class="ci-ico">🕐</div><div><div class="ci-lbl">Support Hours</div><div class="ci-val">Mon–Sat, 9 AM – 7 PM</div></div></div>
       </div>
